# architecture-and-operating-systems-starter-2026

./: README.md  brief.md  pyproject.toml  test_urls.txt
pysh/: builtins.py  colors.py  shell.py
