[project]
name = "pysh"
version = "0.1.0"
description = "A minimal educational shell in Python"
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.2.2",
    "requests>=2.32.5",
]

[project.scripts]
pysh = "pysh.shell:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
